<resources>
    <string name="app_name">GradeApp</string>
    <string name="welcome">welcome</string>
    <string name="cst438_group_project">CST438 Group Project</string>
    <string name="Title">TextView</string>

    <!--login screen assets-->
    <string name="please_enter_name">Please enter name</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login">Login</string>
    <string name="course_display">Course Display</string>

    <!--activity_create_account-->
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="reenter_password_label">Reenter Password:</string>
    <string name="create_account">Create</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="create_account_text">Create Account</string>
    <string name="cancel">cancel</string>
    <string name="recyclerButton">Button</string>
    <string name="Logout">Button</string>
    <string name="LogoutButton">Logout</string>
    <string name="credentials_requirements">Username and password must contain at least 1 lower case, uppercase, and number character and be at least 7 characters long.</string>

    <!--activity_create_assignment assets-->
    <string name="score_label">Score</string>
    <string name="max_score_label">Max Score:</string>
    <string name="due_date_label">Due Date:</string>
    <string name="assigned_date_label">Assigned Date:</string>
    <string name="details_hint">enter assignment details</string>
    <string name="create_assignment_label">Create Assignment</string>
    <string name="category_label">Category</string>
    <string name="weight_hint">Enter Grade Weight</string>
    <string name="back_button">Back</string>
    <string name="add_assignment_button">add assignment</string>
    <string name="delete_assignment_label">Delete</string>





    <string name="add_course_button">Add Course</string>
    <string name="logout">Logout</string>
    <string name="titleHint">Please enter course name</string>
    <string name="courseName">Course Name</string>
    <string name="courseInstructor">Instructor</string>
    <string name="iHint">Please enter instructor name</string>
    <string name="sDate">Start Date</string>
    <string name="eDate">End Date</string>
    <string name="eHint">"Please enter end date "</string>
    <string name="sHint">"Please enter start date "</string>
    <string name="courseTitle">Welcome to Course Manager</string>

</resources>
